--- a/carrito.html
+++ b/carrito.html
@@ -282,6 +282,9 @@
           </div>
         </div>
       </div>
+      <div class="footer-image">
+        <img src="./assets/img/images/footer_mario.png" alt="Footer de Mario">
+      </div>
     </footer>
 
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
