cambio de colores

--- a/carrito.html
+++ b/carrito.html
@@ -129,7 +129,7 @@
         </footer>
       </aside>
       <main>
-        <h2 class="titulo-principal">Carrito</h2>
+        <h2 class="titulo-principal"></h2>
         <div class="contenedor-carrito">
           <p id="carrito-vacio" class="carrito-vacio">
             Tu carrito está vacío. <i class="bi bi-emoji-frown"></i>
